# Pando

./: .gitignore  Cargo.toml  README.md  index.html  snapshot.pando  specs.html
src/: authority.rs  classify.rs  clock.rs  config.rs  daemon.rs  escape.rs  fsutil.rs  git.rs  lib.rs  main.rs  model.rs  registry.rs  rehydrate.rs  service.rs  snapshot.rs  store.rs  sync.rs  transport.rs  tui.rs
tests/: phase0.rs
