[package]
name = "pando"
version = "0.1.0"
edition = "2024"
description = "Working-tree continuity across machines"
license = "MIT"

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0", features = ["serde"] }
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ctrlc = "3.5"
notify = "8.2"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.23"

[profile.release]
lto = "thin"
strip = true
