[package]
name = "pando"
version = "0.1.0"
edition = "2024"
description = "Working-tree continuity across machines"
license = "MIT"

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0", features = ["serde"] }
blake3 = "1.8"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
ctrlc = "3.5"
getrandom = "0.4"
ignore = "0.4"
notify = "8.2"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snow = "0.10"
walkdir = "2.5"
zeroize = "1.9"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.23"

[profile.release]
lto = "thin"
strip = true
